--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -78,13 +78,14 @@
 }
 .ai__header-content__people p{
     margin-left: 1rem;
+    margin-bottom: 1.5rem;
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 12px;
     color: #fff;
     text-align: center;
     line-height: 38px;
-
+    align-self: center;
 }
 .ai__header-image{
     flex: 1; 
@@ -118,9 +119,11 @@
     }
     .ai__header-content__people{
         flex-direction: column;
+        align-items: center;
     }
     .ai__header-content__people p {
         margin: 0;
+        align-self: center;
     }
     .ai__header-content__input input,
     .ai__header-content__input button{
